@@ -2,6 +2,9 @@ package com.cursos.api.springsecuritycourse.exception;
 
 import com.cursos.api.springsecuritycourse.dto.ApiError;
 import jakarta.servlet.http.HttpServletRequest;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
@@ -11,13 +14,14 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+    private static final Logger LOGGER = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<?> handlerGenericException(HttpServletRequest request, Exception exception){
+    public ResponseEntity<ApiError> handlerGenericException(HttpServletRequest request, Exception exception){
 
         ApiError apiError = new ApiError();
         apiError.setBackendMessage(exception.getLocalizedMessage());
@@ -31,7 +35,7 @@ public class GlobalExceptionHandler {
     }
 
     @ExceptionHandler(AccessDeniedException.class)
-    public ResponseEntity<?> handlerAccessDeniedException(HttpServletRequest request,
+    public ResponseEntity<ApiError> handlerAccessDeniedException(HttpServletRequest request,
                                                           AccessDeniedException exception){
 
         ApiError apiError = new ApiError();
@@ -47,7 +51,7 @@ public class GlobalExceptionHandler {
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<?> handlerMethodArgumentNotValidException(HttpServletRequest request,
+    public ResponseEntity<ApiError> handlerMethodArgumentNotValidException(HttpServletRequest request,
                                                                     MethodArgumentNotValidException exception){
 
         ApiError apiError = new ApiError();
@@ -57,10 +61,14 @@ public class GlobalExceptionHandler {
         apiError.setTimestamp(LocalDateTime.now());
         apiError.setMessage("Error en la petición enviada");
 
-        System.out.println(
-                exception.getAllErrors().stream().map(each -> each.getDefaultMessage())
-                        .collect(Collectors.toList()));
+        List<String> errorMessages = exception.getAllErrors().stream()
+                .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                .toList();
 
+        String errorMessageString = String.valueOf(errorMessages);
+        if (!errorMessageString.isEmpty()) {
+            LOGGER.info(errorMessageString);
+        }
 
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(apiError);
     }
